--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <div class="inner">
                 <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">MY PROFILE</a></li>
+                    <li><a href="./index.html">HOME</a></li>
+                    <li><a href="./profile.html">MY PROFILE</a></li>
                     <li><a href="#">WORKS</a></li>
                 </ul>
             </div>
@@ -27,12 +27,12 @@
         </div>
         <div id="mask"></div>
         
-        <section>
+        <div class="top-hero">
             <div class="hero">
                 <img src="./images/top.jpg" alt="">
                 <h1 class="headline">MY PORTFOLIO</h1>
             </div>
-        </section> 
+        </div> 
         <div class="slider">
 
         </div>
