--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
                     <li><a href="./profile.html">MY PROFILE</a></li>
-                    <li><a href="#">WORKS</a></li>
+                    <li><a href="./work.html">WORKS</a></li>
                 </ul>
             </div>
         </nav>
